--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,50 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.App{
+  display: flex;
+justify-content: center;
+align-items: center;
+background: gray;
+height: 100vh;
+}
+#drum-machine {
+  max-width: 500px;
+  min-width: 500px;
+  padding: 20px;
+  min-height: 200px;
+  background: rgb(97, 97, 97);
+  border: 5px solid yellow;
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+}
+
+#display {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 300px;
+  padding: 10px;
+}
+
+.drum-pad{
+  width: 80px;
+  height: 60px;
+  background: gray;
+  color: white;
+  font-size: 20px;
+  border-radius: 10px;
+  outline: none;
+  border: none;
+  margin: 5px;
+  cursor: pointer;
+}
+.show{
+  color: white;
+  background-color: black;
+  width: 100px;
+  padding: 10px;
+}
